--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -35,13 +35,13 @@ stream {
         ssl_preread            off;
         proxy_timeout          600s;
         access_log /dev/stdout stream_routing;
-    {%- if "pods" in proxy_nginx_service_list %}
+{% if "pods" in proxy_nginx_service_list %}
         proxy_pass             pods-nginx:80;
-    {%- else %}
+{% else %}
         # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
         # should what I'm doing here.
         proxy_pass             {{proxy_primary_site_admin_tenant_base_url}};
-    {%- endif %}        
+{% endif %}        
 
     }
 
@@ -140,13 +140,13 @@ http {
 	# authenticator
         location /v3/oauth2
         {
-        {%- if "authenticator" in proxy_nginx_service_list %}
+{% if "authenticator" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://authenticator-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
@@ -172,13 +172,13 @@ http {
 	# security 
         location /v3/security
         {
-        {%- if "security" in proxy_nginx_service_list %}
+{% if "security" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://sk-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
         } 
@@ -186,13 +186,13 @@ http {
 	# tenants 
         location /v3/tenants
         {
-        {%- if "tenants" in proxy_nginx_service_list %}
+{% if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://tenants-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
@@ -245,13 +245,13 @@ http {
 	# sites
         location /v3/sites
         {
-        {%- if "tenants" in proxy_nginx_service_list %}
+{% if "tenants" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://tenants-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
@@ -276,13 +276,13 @@ http {
 	# streams
         location /v3/streams
         {
-        {%- if "streams" in proxy_nginx_service_list %}
+{% if "streams" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://streams-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
@@ -313,13 +313,13 @@ http {
 	# systems
         location /v3/systems
         {
-        {%- if "systems" in proxy_nginx_service_list %}
+{% if "systems" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://systems-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -327,13 +327,13 @@ http {
 	# tokens
         location /v3/tokens
         {
-        {%- if "tokens" in proxy_nginx_service_list %}
+{% if "tokens" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://tokens-api:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
@@ -341,13 +341,13 @@ http {
 	# jobs
         location /v3/jobs
         {
-        {%- if "jobs" in proxy_nginx_service_list %}
+{% if "jobs" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://jobs-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -355,26 +355,26 @@ http {
 	# actors 
         location /v3/actors
         {
-        {%- if "actors" in proxy_nginx_service_list %}
+{% if "actors" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://actors-nginx:80;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
     # pods
         location /v3/pods
         {
-        {%- if "pods" in proxy_nginx_service_list %}
+{% if "pods" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://pods-nginx:80;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -383,13 +383,13 @@ http {
 	# apps
         location /v3/apps
         {
-        {%- if "apps" in proxy_nginx_service_list %}
+{% if "apps" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://apps-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -397,11 +397,11 @@ http {
 	# monitoring
         location /grafana/
         {
-        {%- if "monitoring" in proxy_nginx_service_list %}
+{% if "monitoring" in proxy_nginx_service_list %}
             proxy_pass http://monitoring-grafana:3000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -426,13 +426,13 @@ http {
 	# notifications
         location /v3/notifications
         {
-        {%- if "notifications" in proxy_nginx_service_list %}
+{% if "notifications" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://notifications-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -440,13 +440,13 @@ http {
 	# globus-proxy
         location /v3/globus-proxy
         {
-        {%- if "globus-proxy" in proxy_nginx_service_list %}
+{% if "globus-proxy" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://globus-proxy:5000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
@@ -454,13 +454,13 @@ http {
     # workflows
         location /v3/workflows
         {
-        {%- if "workflows" in proxy_nginx_service_list %}
+{% if "workflows" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://workflows-api-service:8000;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}        
+{% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
