--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -39,6 +39,13 @@ spec:
               configMapKeyRef:
                 name: systems-config
                 key: service_site_url
+{% if systems_globus_client_id is defined %}
+          - name: TAPIS_GLOBUS_CLIENT_ID
+             valueFrom:
+               configMapKeyRef:
+                 name: systems-config
+                 key: globus_client_id
+{% endif %}
           - name: TAPIS_DB_PASSWORD
             valueFrom:
               secretKeyRef:
