--- a/playbooks/roles/tenants/templates/kube/tenants-config.yml
+++ b/playbooks/roles/tenants/templates/kube/tenants-config.yml
@@ -13,8 +13,8 @@ data:
       "tenants": ["*"],
       "use_sk": {{tenants_use_sk|to_json}},
       "show_traceback": {{tenants_show_traceback|to_json}},
-      {%- if tenants_test_jwt %}
+{% if tenants_test_jwt %}
       "test_jwt": "{{tenants_test_jwt}},"
-      {%- endif %}
+{% endif %}
       "log_level": "{{tenants_log_level}}"
     }
