--- a/playbooks/roles/tokens/defaults/main/images.yml
+++ b/playbooks/roles/tokens/defaults/main/images.yml
@@ -1,2 +1,3 @@
 tokens_api_image: tapis/tokens-api:1.2.3
 tokens_api_tests_image: tapis/tokens-api-tests:1.2.3
+tokens_add_token_roles_image: tapis/add_token_roles:latest
