--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -298,13 +298,13 @@ http {
 	# files
         location /v3/files
         {
-        {%- if "files" in proxy_nginx_service_list %}
+{% if "files" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://files-api:8080;
-        {%- else %}
+{% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
-        {%- endif %}
+{% endif %}
             proxy_redirect off;
             proxy_set_header Host $host;
             client_max_body_size 50G;
