--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -23,9 +23,12 @@ stream {
     # 'map' maps input string to output variable. Regex works.
     # Ports used are purely random. Feel free to change.
     map $ssl_preread_server_name $instanceport {
-        # Route TCP with following whatever.pods.whatever.develop.tapis.ioto pods-nginx.
-        "~pods.{{proxy_nginx_server_name}}"      5510;
-        # Else default to 8443 (listened to by http stanza).
+        # Route TCP with following whatever.pods.whatever.tenant.tapis.io to pods-traefik
+        # proxy_nginx_server_name would be `*.develop.tapis.io`, `*.tapis.io`, etc.
+        "~*.pods.{{proxy_nginx_server_name}}"    5510;
+        # Route non-pod things to 8443 (arbitrary port, listened to by http stanza) to follow regular nginx walkthrough
+        "~{{proxy_nginx_server_name}}"           8443;
+        # Else default to 5510
         default                         8443;
     }
  
@@ -239,7 +242,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header Content-Length "";
             proxy_set_header X-Tapis-Token $http_x_tapis_token;
-            proxy_pass {{proxy_primary_site_admin_tenant_base_url}}/v3/site-router/tokens/check;
+            # Initial pods service nginx map stanza breaks when this url is used though because
+            # SNI doesn't map up correctly on the request. Changing to direct site-router route.
+            proxy_pass http://site-router-api:8000/v3/site-router/tokens/check;
         }
     
 	# sites
@@ -372,6 +377,18 @@ http {
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
             proxy_pass http://pods-nginx:80;
+{% else %}
+            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+{% endif %}        
+            proxy_redirect off;
+            proxy_set_header Host $host;
+        }
+
+    # ui
+        location /tapis-ui
+        {
+{% if "tapisui" in proxy_nginx_service_list %}
+            proxy_pass http://tapisui-service:3000;
 {% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
 {% endif %}        
