--- a/playbooks/roles/actors/defaults/main/images.yml
+++ b/playbooks/roles/actors/defaults/main/images.yml
@@ -1,8 +1,8 @@
 actors_core_image: abaco/core-v3:{{ actors_service_version }}
 actors_grafana_image: grafana/grafana
-actors_prometheus_image: abaco/prom:dev
+actors_prometheus_image: abaco/promv3:1.2.0
 actors_nginx_image: abaco/nginx:latest
-actors_nginxk8s_image: abaco/nginxk8s:dev
+actors_nginxk8s_image: abaco/nginxk8s:1.2.0
 actors_mongo_image: mongo:4.2.6
 actors_alpine_image: alpine:latest
 actors_mongobackup_image: tapis/mongobackup:0.1
