--- a/playbooks/roles/files/templates/kube/workers.yml
+++ b/playbooks/roles/files/templates/kube/workers.yml
@@ -17,8 +17,10 @@ spec:
       labels:
         app: files-workers
     spec:
+{% if files_node_selector %}
       nodeSelector:
         exempt: "yes"
+{% endif %}
       containers:
         - envFrom:
             - configMapRef:
