--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -32,14 +32,14 @@ stream {
         default                         8443;
     }
  
-    # pods_service. Route TCP to pods-nginx pod.
+    # pods_service. Route TCP to pods-traefik pod.
     server {
         listen                 5510;
         ssl_preread            off;
         proxy_timeout          600s;
         access_log /dev/stdout stream_routing;
 {% if "pods" in proxy_nginx_service_list %}
-        proxy_pass             pods-nginx:80;
+        proxy_pass             pods-traefik:80;
 {% else %}
         # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
         # should what I'm doing here.
@@ -376,7 +376,7 @@ http {
 {% if "pods" in proxy_nginx_service_list %}
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
-            proxy_pass http://pods-nginx:80;
+            proxy_pass http://pods-traefik:80;
 {% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
 {% endif %}        
