Several updates here based on writing the documentation for generating tapis-test; 1) New role, get_defaults, which computes global defaults for configurations, 2) Updates to proxy, tokens and workflows defaults, 3) deleted unused authenticator.conf template, 4) updated README to point to documentation site and to document change management.

--- a/playbooks/generate-single-component.yml
+++ b/playbooks/generate-single-component.yml
@@ -7,6 +7,9 @@
     tapisctl_action: 'generate'
   
   tasks: 
+  - name: Set default values for vars
+    include_role: 
+      name: get_defaults
 
   - name: create tapisdir 
     file: 
