--- a/playbooks/roles/proxy/defaults/main/vars.yml
+++ b/playbooks/roles/proxy/defaults/main/vars.yml
@@ -10,25 +10,11 @@ proxy_site_router_api_version: 1.3.0
 proxy_storage_class: "{{ global_storage_class }}"
 proxy_nginx_cert_file: $HOME/cert.pem
 proxy_nginx_cert_key: $HOME/cert.key
-proxy_nginx_server_name: 
+proxy_nginx_server_name: '*.{{ global_tapis_domain }}'
 proxy_service_tenants:
   - dev
   - admin
-proxy_nginx_service_list:
-  - apps
-  - authenticator
-  - files
-  - jobs
-  - meta
-  - pgrest
-  - security
-  - streams
-  - systems
-  - tapisui
-  - tenants
-  - tokens
-  - workflows
-
-proxy_pgrest_custom_block: null
-proxy_meta_custom_block: null
+proxy_nginx_service_list: '{{ components_to_deploy }}'
+proxy_pgrest_custom_block: ''
+proxy_meta_custom_block: ''
 
