--- a/playbooks/roles/actors/defaults/main/images.yml
+++ b/playbooks/roles/actors/defaults/main/images.yml
@@ -1,9 +1,9 @@
 actors_core_image: abaco/core-v3:{{ actors_service_version }}
-actors_grafana_image: grafana/grafana
+actors_grafana_image: grafana/grafana:9.4.7
 actors_prometheus_image: abaco/promv3:1.3.0
-actors_nginx_image: abaco/nginx:latest
+actors_nginx_image: abaco/nginx:1.9.1
 actors_nginxk8s_image: abaco/nginxk8s:1.3.0
 actors_mongo_image: mongo:4.2.6
-actors_alpine_image: alpine:latest
+actors_alpine_image: alpine:3.17
 actors_mongobackup_image: tapis/mongobackup:0.1
 actors_rabbitmq_image: rabbitmq:3.6.12-management
