--- a/playbooks/roles/streams/defaults/main/images.yml
+++ b/playbooks/roles/streams/defaults/main/images.yml
@@ -1,4 +1,4 @@
-streams_alpine_image: alpine:latest
+streams_alpine_image: alpine:3.17
 streams_influxdb1_image: influxdb:1.7.7
 streams_influxdb2_image: influxdb:2.1.1-alpine
 streams_mysql_image: mysql:5.7
