--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -10,6 +10,7 @@ events {
     worker_connections  1024;
 }
 
+{% if "pods" in proxy_nginx_service_list %}
 ### Everything first goes through this stream stanza. Map matches subdomain to port to route to.
 ### If no map found, we route to default 8443. This directs back to HTTP stanza as normal.
 stream {
@@ -38,13 +39,7 @@ stream {
         ssl_preread            off;
         proxy_timeout          600s;
         access_log /dev/stdout stream_routing;
-{% if "pods" in proxy_nginx_service_list %}
         proxy_pass             pods-traefik:80;
-{% else %}
-        # cgarcia- Unsure if this entire 'server' block should be in an if, or if we
-        # should what I'm doing here.
-        proxy_pass             {{proxy_primary_site_admin_tenant_base_url}};
-{% endif %}        
 
     }
 
@@ -58,6 +53,7 @@ stream {
         proxy_pass              127.0.0.1:$instanceport;
     }
 }
+{% endif %}
 
 
 http {
@@ -91,7 +87,7 @@ http {
         listen 80;
         listen [::]:80;
     
-        server_name  {{proxy_nginx_server_name}};
+        server_name  {{ proxy_nginx_server_name }};
     
         # Redirect with 307 to preserve post data. (301 does not)
         if ($request_method = POST) {
@@ -106,11 +102,13 @@ http {
     server
     {
     
+{% if "pods" in proxy_nginx_service_list %}
         listen 8443 ssl http2;
         listen [::]:8443 ssl http2;
-    
-        server_name  {{proxy_nginx_server_name}};
-    
+{% else %}
+         listen 443 ssl;
+{% endif %} 
+        server_name  {{ proxy_nginx_server_name }};
         ssl_certificate /tmp/ssl/tls.crt;
         ssl_certificate_key /tmp/ssl/tls.key;
     
@@ -261,6 +259,7 @@ http {
             proxy_set_header Host localhost:5000;
         }
         
+{% if "meta" in proxy_nginx_service_list or site_type == 2 %}
 	# meta
         location /v3/meta
         {
@@ -277,7 +276,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-        
+{% endif %}
+
+{% if "streams" in proxy_nginx_service_list or site_type == 2 %}
 	# streams
         location /v3/streams
         {
@@ -299,7 +300,8 @@ http {
                 return 204;
             }
         }
-        
+{% endif %}
+
 	# files
         location /v3/files
         {
@@ -370,6 +372,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
+
+
+{% if "pods" in proxy_nginx_service_list or site_type == 2 %}
     # pods
         location /v3/pods
         {
@@ -378,13 +383,14 @@ http {
             error_page 500 /token-revoked.json; 
             proxy_pass http://pods-traefik:80;
 {% else %}
-            proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
+            proxy_pass {{ proxy_primary_site_admin_tenant_base_url }};
 {% endif %}        
             proxy_redirect off;
             proxy_set_header Host $host;
         }
+{% endif %}        
 
-    # ui
+        # ui
         location /tapis-ui
         {
 {% if "tapisui" in proxy_nginx_service_list %}
@@ -411,6 +417,7 @@ http {
             proxy_set_header Host $host;
         }
 
+{% if "monitoring" in proxy_nginx_service_list or site_type == 2 %}
 	# monitoring
         location /grafana/
         {
@@ -422,7 +429,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
+{% endif %}
 
+{% if "pgrest" in proxy_nginx_service_list or site_type == 2 %}
 	# pgrest
         location /v3/pgrest
         {
@@ -439,7 +448,7 @@ http {
             {{ proxy_pgrest_custom_block | indent(width=12) }}
 {% endif %}
         }
-
+{% endif %}
 	# notifications
         location /v3/notifications
         {
@@ -468,6 +477,7 @@ http {
             proxy_set_header Host $host;
         }
 
+{% if "workflows" in proxy_nginx_service_list or site_type == 2 %}
     # workflows
         location /v3/workflows
         {
@@ -481,6 +491,6 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-
+{% endif %} 
     }
 }
