Updates to the example inventory files.

--- a/inventory_example/kube-inventory.yml
+++ b/inventory_example/kube-inventory.yml
@@ -1,7 +1,13 @@
 
 tapis_installs:
   hosts:
-    tapisquickstart-kube1:
+    # A tapis test environemnt. 
+    min_primary-kube:
       ansible_connection: local
       tapisflavor: kube
+
+    # Another Tapis environment
+    # all_services_primary-kube:
+    #   ansible_connection: local
+    #   tapisflavor: kube
 
