Adding xhost to pgrest nginx stanza
This allows us to change the host to use inside of our if statement. Meaning we can redirect `a2cps.develop.tapis.io` to `a2cps.tapis.io` and use the latter's host in the request. This way `a2cps.tapis.io` doesn't complain about not being able to parse `a2cps.develop.tapis.io`.

--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -436,13 +436,14 @@ http {
         location /v3/pgrest
         {
 {% if "pgrest" in proxy_nginx_service_list %}
+	    set $xhost $host;
             auth_request /_auth;
             error_page 500 /token-revoked.json; 
 {% if proxy_pgrest_custom_block is defined %}
             {{ proxy_pgrest_custom_block | indent(width=12) }}
 {% endif %}
             proxy_redirect off;
-            proxy_set_header Host $host;
+            proxy_set_header Host $xhost;
             proxy_pass http://pgrest-api:5000;
 {% else %}
             proxy_pass {{proxy_primary_site_admin_tenant_base_url}};
