--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: systems-api
     spec:
-{% if systems_node_selector %}
+{% if systems_node_selector is defined %}
       nodeSelector:
         exempt: "{{systems_node_selector}}"
 {% endif %}
