--- a/playbooks/roles/get_defaults/tasks/main.yml
+++ b/playbooks/roles/get_defaults/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: Set default values for vars
   ansible.builtin.set_fact:
     tapisdir: '{{ tapisdir | default(tapisdir_default) }}'
+    tapisdatadir: '{{ tapisdir | default(tapisdatadir_default) }}'
     global_vault_url: '{{ global_vault_url | default(global_vault_url_default) }}'
     global_service_url: '{{ global_service_url | default(global_service_url_default) }}'
     components_to_deploy: '{{ components_to_deploy | default(components_to_deploy_default) }}'
