--- a/playbooks/roles/proxy/templates/docker/locations/security.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/security.conf
@@ -5,7 +5,7 @@ location /v3/security
     error_page 500 /token-revoked.json; 
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream http://sk-api:8080;
+    set $upstream http://security-api:8080;
     proxy_pass $upstream;
 
     proxy_redirect off;
