--- a/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
+++ b/playbooks/roles/proxy/templates/docker/locations/globus-proxy.conf
@@ -3,7 +3,7 @@ location /v3/globus-proxy
 {            
 
     # use var to allow nginx to start even if $upstream is down
-    set $upstream {{ proxy_service_url }};
+    set $upstream http://globus-proxy:5000;
     proxy_pass $upstream;
 
     proxy_redirect off;
