fixed examples to use decent defaults

--- a/inventory_example/host_vars/all_services_primary-kube.yml
+++ b/inventory_example/host_vars/all_services_primary-kube.yml
@@ -3,6 +3,8 @@
 # primary site, since we have to provide additional configurations for the 
 # extra services.
 
+tapisdir: '{{ ansible_env.HOME }}/tmp/{{ inventory_hostname }}'
+tapisdatadir: '$HOME/tmp/{{ inventory_hostname }}-data'
 
 site_type: 1
 global_tapis_domain: develop.tapis.io
