--- a/playbooks/roles/tokens/templates/docker/docker-compose.yml
+++ b/playbooks/roles/tokens/templates/docker/docker-compose.yml
@@ -3,7 +3,6 @@ networks:
     tapis:
         name: tapis
         external: true
-        external: true
 
 
 services:
@@ -24,5 +23,6 @@ services:
         environment:
             # an example of the allservices_password, only used in develop. generate a new one with
             # date +%s | sha256sum | base64 | head -c 32 ; echo or something similar.
-            - site-admin-privatekey
+            - site_admin_privatekey
             - site_dev_privatekey
+            - tokens_service_password
